add parameters in query
